crates/noc/src/tui/snapshots/noc__tui__app__tests__replies_reach_their_own_panel.snap
---
source: crates/noc/src/tui/app.rs
expression: terminal.backend()
---
"╔ /srv/left ═════════╤═══════╗╔ /srv ══════════════╤═══════╗"
"║       ↑Name        │ Size  ║║       ↑Name        │ Size  ║"
"║/..                 │UP--DIR║║/..                 │UP--DIR║"
"║/deeper             │    DIR║║/left               │    DIR║"
"╟────────────────────┴───────╢╟────────────────────┴───────╢"
"║..                          ║║..                          ║"
"╚════════════════════════════╝╚════════════════════════════╝"
"1Help 2     3View 4Edit 5Copy 6Re~ov7Mkdir8De~te9Pu~Dn10Quit"
