crates/noc/src/tui/snapshots/noc__tui__app__tests__tabs_go_in_the_frame_where_the_config_says.snap
---
source: crates/noc/src/tui/app.rs
expression: terminal.backend()
---
"╔ 1 docs ═ 2 /srv/docs ══════╗╔ /srv ══════════════════════╗"
"║       ↑Name        │ Size  ║║       ↑Name        │ Size  ║"
"╟────────────────────────────╢╟────────────────────────────╢"
"║..                          ║║..                          ║"
"╚════════════════════════════╝╚════════════════════════════╝"
"1Help 2     3View 4Edit 5Copy 6Re~ov7Mkdir8De~te9Pu~Dn10Quit"
